<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_custom_calendar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="@drawable/round_view2"
        android:backgroundTint="@color/black"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/previous_month"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <TextView
            android:id="@+id/txt_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="January"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/next_month"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_5sdp"
                android:background="@color/gray_medium"
                android:paddingBottom="@dimen/_5sdp">

                <TextView
                    android:id="@+id/sun"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sun"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/thu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thr"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fri"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sat"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black" />

            <GridView
                android:id="@+id/calendar_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:numColumns="7"
                android:padding="@dimen/_2sdp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>