<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_7ssp">


        <com.app.schoolerpapp.ui.custom.CalendarCustomView
            android:id="@+id/custom_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="4.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/custom_calendar">

            <TextView
                android:id="@+id/txt_absent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/square_view_white"
                android:text="@string/absent"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/_8sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:drawableTint="@color/red"
                android:gravity="bottom"
                android:layout_marginRight="@dimen/_3sdp"
                app:layout_constraintEnd_toStartOf="@+id/txt_present"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/square_view_white"
                android:text="@string/present"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/_8sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:drawableTint="@color/green"
                android:gravity="bottom"
                android:layout_marginRight="@dimen/_3sdp"
                app:layout_constraintEnd_toStartOf="@+id/txt_late"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/txt_late"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/square_view_white"
                android:text="@string/late"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/_8sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:drawableTint="@color/yellow"
                android:gravity="bottom"
                android:layout_marginRight="@dimen/_3sdp"
                app:layout_constraintEnd_toStartOf="@+id/txt_halfday"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/txt_halfday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/square_view_white"
                android:text="@string/half_day"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/_8sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:drawableTint="@color/orange"
                android:gravity="bottom"
                android:layout_marginRight="@dimen/_3sdp"
                app:layout_constraintEnd_toStartOf="@+id/txt_holiday"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/txt_holiday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/square_view_white"
                android:text="@string/holiday"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/_8sdp"
                android:drawablePadding="@dimen/_3sdp"
                android:drawableTint="@color/gray_dark"
                android:gravity="bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_attendanceList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_calendar"
            app:layout_constraintVertical_weight="5.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>