<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <data>

        <variable
            name="userDataViewModel"
            type="com.app.schoolerpapp.viewmodel.UserDataViewModel" />

        <variable
            name="userData"
            type="com.app.schoolerpapp.model.UserData" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:layout_marginEnd="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_17sdp"
            android:backgroundTint="@color/white"
            android:background="@drawable/round_view"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_msg_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/half_square_view_theme"
                android:padding="@dimen/_7sdp"
                android:text="@string/change_lang"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_msg_title">

                <RadioButton
                    android:id="@+id/radio_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/lan_1"

                    />

                <RadioButton
                    android:id="@+id/radio_arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:checked="false"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/lan_2" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_cross"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:background="@drawable/round_oval_circle"
            android:backgroundTint="@color/colorAccent"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>