<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="homework"
            type="com.app.schoolerpapp.model.Homework" />

        <variable
            name="studentViewModel"
            type="com.app.schoolerpapp.viewmodel.StudentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/_8ssp"
            app:cardUseCompatPadding="true"
            app:contentPaddingBottom="@dimen/_5sdp"
            app:contentPaddingLeft="@dimen/_3sdp"
            app:contentPaddingRight="@dimen/_3sdp"
            app:contentPaddingTop="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_complte_date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submission_date"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_complete" />

                <TextView
                    android:id="@+id/txt_complte_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:text="@{` : `+ homework.submissionDate}"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintStart_toEndOf="@+id/txt_complte_date2"
                    app:layout_constraintTop_toTopOf="@+id/btn_complete" />


                <TextView
                    android:id="@+id/btn_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/round_view"
                    android:backgroundTint="@color/black"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/complete"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_class2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_complete" />

                <TextView
                    android:id="@+id/txt_colon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:visibility="gone"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/txt_fee_group2"
                    app:layout_constraintTop_toBottomOf="@+id/btn_complete" />

                <TextView
                    android:id="@+id/txt_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@={homework.studentClass}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintStart_toEndOf="@+id/txt_colon1"
                    app:layout_constraintTop_toBottomOf="@+id/btn_complete" />

                <TextView
                    android:id="@+id/txt_hw_subjet2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_class" />

                <TextView
                    android:id="@+id/txt_colon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/txt_hw_subjet2"
                    app:layout_constraintTop_toBottomOf="@+id/txt_class" />

                <TextView
                    android:id="@+id/txt_hw_subjet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@={homework.subject}"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toEndOf="@+id/txt_colon2"
                    app:layout_constraintTop_toBottomOf="@+id/txt_class" />

                <TextView
                    android:id="@+id/txt_hw_staus2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_hw_subjet" />

                <TextView
                    android:id="@+id/txt_colon3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : "
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/txt_hw_subjet2"
                    app:layout_constraintTop_toBottomOf="@+id/txt_hw_subjet" />

                <TextView
                    android:id="@+id/txt_hw_staus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@={homework.status}"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toEndOf="@+id/txt_colon3"
                    app:layout_constraintTop_toBottomOf="@+id/txt_hw_subjet" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>